# GPUStreamlines

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  align_hydi.py  build_cuslines.sh  dockerbuild.sh  download_hydi.sh  merge_trk.sh  pyproject.toml  run_dipy_cpu.py  run_dipy_cpu_hardi.py  run_dipy_gpu.py  run_dipy_gpu_hardi.py  run_gpu_streamlines.py  setup.py
.github/: copilot-instructions.md
.github/workflows/: dockerbuild.yml  publish_pypi.yml
cuslines/: Makefile  __init__.py  boot_utils.py  cu_direction_getters.py  cu_propagate_seeds.py  cu_tractography.py  cudamacro.h  cuslines.cpp  cuslines.py  cutils.py  cuwsort.cuh  disc.h  generate_streamlines_cuda.cu  generate_streamlines_cuda.h  generic_tracker.py  globals.h  ptt.cu  ptt.cuh  utils.cu
cuslines/cuda_c/: boot.cu  disc.h  generate_streamlines_cuda.cu  globals.h  ptt.cu  ptt.cuh  ptt_init.cu  tracking_helpers.cu  utils.cu
cuslines/cuda_python/: __init__.py  _globals.py  cu_direction_getters.py  cu_propagate_seeds.py  cu_tractography.py  cutils.py
cuslines/metal/: README.md  __init__.py  mt_direction_getters.py  mt_propagate_seeds.py  mt_tractography.py  mutils.py
cuslines/metal_shaders/: boot.metal  disc.h  generate_streamlines_metal.metal  globals.h  philox_rng.h  ptt.metal  tracking_helpers.metal  types.h  utils.metal  warp_sort.metal
cuslines/numba/: __init__.py  nu_globals.py  nu_tractography.py
cuslines/numba_njit/: generate_streamlines_numba.py  num_streamlines_numba.py  tracking_helpers.py
cuslines/webgpu/: README.md  __init__.py  benchmark.py  wg_direction_getters.py  wg_propagate_seeds.py  wg_tractography.py  wgutils.py
cuslines/wgsl_shaders/: boot.wgsl  disc.wgsl  generate_streamlines.wgsl  globals.wgsl  philox_rng.wgsl  ptt.wgsl  tracking_helpers.wgsl  types.wgsl  utils.wgsl  warp_sort.wgsl
docker/: Dockerfile  dockerbuild.sh
