[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuslines"
version = "2.0.0"
description="GPU-accelerated tractography package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "nibabel",
    "tqdm",
    "dipy",
    "trx-python"
]

[project.optional-dependencies]
cu13 = [
    "nvidia-cuda-runtime",
    "nvidia-curand-cu12",
    "cuda-python<14",
    "cuda-core[cu13]",
    "cuda-cccl[cu13]"
]

cu12 = [
    "nvidia-cuda-runtime-cu12",
    "nvidia-curand-cu12",
    "cuda-python<13",
    "cuda-core[cu12]",
    "cuda-cccl[cu12]"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["cuslines*"]
