[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff]
target-version = "py37"
include = [
    "cuslines/cuda_python/*.py"]
exclude = ["docs/source/conf.py",
         "examples/"]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "C",
  "W",
  "B",
  "I",
]
ignore = [
  "B905",
  "C901",
  "E203",
  "F821",
  "B021",
  "C408",
  "I001",
  "B027",
]

[project]
name = "cuslines"
dynamic = ["version"]
description="GPU-accelerated tractography package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "numba",
    "nibabel",
    "tqdm",
    "dipy",
    "trx-python",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/dipy/GPUStreamlines"

[tool.setuptools.package-data]
cuslines = ["cuda_c/*", "metal_shaders/*", "wgsl_shaders/*"]

[project.optional-dependencies]
cu13 = [
    "nvidia-cuda-runtime",
    "nvidia-curand-cu12",
    "cuda-python<14",
    "cuda-core[cu13]",
    "cuda-cccl[cu13]"
]

cu12 = [
    "nvidia-cuda-runtime-cu12",
    "nvidia-curand-cu12",
    "cuda-python<13",
    "cuda-core[cu12]",
    "cuda-cccl[cu12]"
]

metal = [
    "pyobjc-framework-Metal",
    "pyobjc-framework-MetalPerformanceShaders",
]

webgpu = [
    "wgpu>=0.18",
]

dev = [
    "ruff>=0.14.10"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cuslines*"]
